<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_bookmarks"
        android:title="@string/bookmark"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/share"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark_filled"
        android:title="@string/bookmark_this_article"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>