<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_standard"
    android:layout_marginBottom="@dimen/margin_standard"
    android:id="@+id/article_item_root">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/half_margin"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="British productivity is rising at last. But Brexit looms over economy" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="@dimen/thumbnail_width"
        android:layout_height="@dimen/thumbnail_height"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/content_desc_thumbnail"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="title,thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <TextView
        android:id="@+id/trail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/trail_textSize"
        tools:text="Brief explanation of the subject, a longer title that might take a few lines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier2" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/half_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:textStyle="italic"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trail"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trail"
        tools:text="Politics"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="@dimen/half_padding"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        tools:text="April 19th, 2018" />

    <ImageButton
        android:id="@+id/share"
        android:layout_width="@dimen/icon_dimension"
        android:layout_height="@dimen/icon_dimension"
        android:layout_marginTop="@dimen/half_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_share"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier1"
        app:srcCompat="@drawable/ic_share_dark" />

    <ImageButton
        android:id="@+id/bookmark"
        android:layout_width="@dimen/icon_dimension"
        android:layout_height="@dimen/icon_dimension"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginEnd="@dimen/half_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_desc_bookmark"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toStartOf="@id/share"
        app:layout_constraintTop_toBottomOf="@id/barrier1"
        app:srcCompat="@drawable/ic_bookmark_outlined" />


</androidx.constraintlayout.widget.ConstraintLayout>